--- a/.github/workflows/build-macos-cpu-dmg.yaml
+++ b/.github/workflows/build-macos-cpu-dmg.yaml
@@ -40,37 +40,37 @@ jobs:
     - name: Build with PyInstaller
       run: pyinstaller nexa-macos-cpu.spec
 
-    - name: Create launcher script
-      run: |
-        if [ -d "nexa" ]; then
-          SCRIPT_NAME="nexa_launcher"
-        else
-          SCRIPT_NAME="nexa"
-        fi
+    # - name: Create launcher script
+    #   run: |
+    #     if [ -d "nexa" ]; then
+    #       SCRIPT_NAME="nexa_launcher"
+    #     else
+    #       SCRIPT_NAME="nexa"
+    #     fi
 
-        cat << EOF > "$SCRIPT_NAME"
-        #!/bin/bash
+    #     cat << EOF > "$SCRIPT_NAME"
+    #     #!/bin/bash
 
-        NEXA_APP="/Applications/Nexa.app"
-        NEXA_EXECUTABLE="\$NEXA_APP/Contents/MacOS/nexa"
+    #     NEXA_APP="/Applications/Nexa.app"
+    #     NEXA_EXECUTABLE="\$NEXA_APP/Contents/MacOS/nexa"
 
-        if [ "\$1" = "--gui" ]; then
-          osascript -e "tell application \"Terminal\" to do script \"\$NEXA_EXECUTABLE\""
-        else
-          "\$NEXA_EXECUTABLE" "\$@"
-        fi
-        EOF
+    #     if [ "\$1" = "--gui" ]; then
+    #       osascript -e "tell application \"Terminal\" to do script \"\$NEXA_EXECUTABLE\""
+    #     else
+    #       "\$NEXA_EXECUTABLE" "\$@"
+    #     fi
+    #     EOF
 
-        chmod +x "$SCRIPT_NAME"
-        echo "LAUNCHER_SCRIPT_NAME=$SCRIPT_NAME" >> $GITHUB_ENV
+    #     chmod +x "$SCRIPT_NAME"
+    #     echo "LAUNCHER_SCRIPT_NAME=$SCRIPT_NAME" >> $GITHUB_ENV
 
-    - name: Add launcher script to app bundle
-      run: |
-        mkdir -p "dist/nexa.app/Contents/Resources"
-        cp "${{ env.LAUNCHER_SCRIPT_NAME }}" "dist/nexa.app/Contents/Resources/nexa"
-        mkdir -p "dist/nexa.app/Contents/Frameworks/nexa"
-        cp "${{ env.LAUNCHER_SCRIPT_NAME }}" "dist/nexa.app/Contents/Frameworks/nexa/nexa_launcher"
-        chmod +x "dist/nexa.app/Contents/Frameworks/nexa/nexa_launcher"
+    # - name: Add launcher script to app bundle
+    #   run: |
+    #     mkdir -p "dist/nexa.app/Contents/Resources"
+    #     cp "${{ env.LAUNCHER_SCRIPT_NAME }}" "dist/nexa.app/Contents/Resources/nexa"
+    #     mkdir -p "dist/nexa.app/Contents/Frameworks/nexa"
+    #     cp "${{ env.LAUNCHER_SCRIPT_NAME }}" "dist/nexa.app/Contents/Frameworks/nexa/nexa_launcher"
+    #     chmod +x "dist/nexa.app/Contents/Frameworks/nexa/nexa_launcher"
 
     - name: Modify Info.plist
       run: |
@@ -125,41 +125,43 @@ jobs:
 
     - name: Create PKG Installer
       run: |
-        mkdir -p pkg_root/Applications pkg_scripts
+        # mkdir -p pkg_root/Applications pkg_scripts
+        mkdir -p pkg_root/Applications
 
         cp -R dist/nexa.app pkg_root/Applications/
 
-        cat << EOF > pkg_scripts/preinstall
-        #!/bin/bash
-        rm -f /usr/local/bin/nexa
-        exit 0
-        EOF
+        # cat << EOF > pkg_scripts/preinstall
+        # #!/bin/bash
+        # rm -f /usr/local/bin/nexa
+        # exit 0
+        # EOF
 
-        cat << EOF > pkg_scripts/postinstall
-        #!/bin/bash
-        ln -sf /Applications/Nexa.app/Contents/Resources/nexa /usr/local/bin/nexa
+        # cat << EOF > pkg_scripts/postinstall
+        # #!/bin/bash
+        # ln -sf /Applications/Nexa.app/Contents/Resources/nexa /usr/local/bin/nexa
 
-        LAUNCHER="/Applications/Nexa.app/Contents/MacOS/nexa"
-        mv "\$LAUNCHER" "\$LAUNCHER.real"
-        cat << EOL > "\$LAUNCHER"
-        #!/bin/bash
-        "\$LAUNCHER.real" --gui
-        EOL
-        chmod +x "\$LAUNCHER"
+        # LAUNCHER="/Applications/Nexa.app/Contents/MacOS/nexa"
+        # mv "\$LAUNCHER" "\$LAUNCHER.real"
+        # cat << EOL > "\$LAUNCHER"
+        # #!/bin/bash
+        # "\$LAUNCHER.real" --gui
+        # EOL
+        # chmod +x "\$LAUNCHER"
 
-        exit 0
-        EOF
+        # exit 0
+        # EOF
 
-        chmod +x pkg_scripts/preinstall pkg_scripts/postinstall
+        # chmod +x pkg_scripts/preinstall pkg_scripts/postinstall
 
         pkgbuild --root pkg_root \
-                --scripts pkg_scripts \
-                --identifier com.yourcompany.nexa \
+                # --scripts pkg_scripts \
+                --identifier com.nexaai.sdk \
                 --version ${{ env.VERSION }} \
                 --install-location / \
                 "Nexa-${{ env.VERSION }}-unsigned.pkg"
 
-        rm -rf pkg_root pkg_scripts
+        # rm -rf pkg_root pkg_scripts
+        rm -rf pkg_root
 
     - name: Sign PKG
       env:
