--- a/.github/workflows/build-macos-pkg.yaml
+++ b/.github/workflows/build-macos-pkg.yaml
@@ -8,7 +8,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-macos:
+  build-macos-cpu:
     runs-on: macos-latest
     steps:
     - uses: actions/checkout@v4
@@ -23,6 +23,13 @@ jobs:
     - name: Install system dependencies
       run: |
         brew install cmake
+    
+    - name: Create and activate virtual environment
+      run: |
+        python -m venv env_cpu
+        source env_cpu/bin/activate
+        echo "VIRTUAL_ENV=$VIRTUAL_ENV" >> $GITHUB_ENV
+        echo "$VIRTUAL_ENV/bin" >> $GITHUB_PATH
 
     - name: Install Python dependencies
       run: |
@@ -39,38 +46,6 @@ jobs:
 
     - name: Build with PyInstaller
       run: pyinstaller nexa-macos-cpu.spec
-
-    # - name: Create launcher script
-    #   run: |
-    #     if [ -d "nexa" ]; then
-    #       SCRIPT_NAME="nexa_launcher"
-    #     else
-    #       SCRIPT_NAME="nexa"
-    #     fi
-
-    #     cat << EOF > "$SCRIPT_NAME"
-    #     #!/bin/bash
-
-    #     NEXA_APP="/Applications/Nexa.app"
-    #     NEXA_EXECUTABLE="\$NEXA_APP/Contents/MacOS/nexa"
-
-    #     if [ "\$1" = "--gui" ]; then
-    #       osascript -e "tell application \"Terminal\" to do script \"\$NEXA_EXECUTABLE\""
-    #     else
-    #       "\$NEXA_EXECUTABLE" "\$@"
-    #     fi
-    #     EOF
-
-    #     chmod +x "$SCRIPT_NAME"
-    #     echo "LAUNCHER_SCRIPT_NAME=$SCRIPT_NAME" >> $GITHUB_ENV
-
-    # - name: Add launcher script to app bundle
-    #   run: |
-    #     mkdir -p "dist/nexa.app/Contents/Resources"
-    #     cp "${{ env.LAUNCHER_SCRIPT_NAME }}" "dist/nexa.app/Contents/Resources/nexa"
-    #     mkdir -p "dist/nexa.app/Contents/Frameworks/nexa"
-    #     cp "${{ env.LAUNCHER_SCRIPT_NAME }}" "dist/nexa.app/Contents/Frameworks/nexa/nexa_launcher"
-    #     chmod +x "dist/nexa.app/Contents/Frameworks/nexa/nexa_launcher"
 
     - name: Modify Info.plist
       run: |
@@ -123,35 +98,168 @@ jobs:
         # Verify the signature
         codesign -vvv --deep --strict "dist/nexa.app"
 
-    # - name: Create PKG Installer
-    #   run: |
-    #     mkdir -p pkg_root/Applications
+    - name: Rename and upload app
+      run: |
+        mv dist/nexa.app dist/nexa.app
+        tar -czf nexa.tar.gz -C dist nexa.app
+      
+    - uses: actions/upload-artifact@v4
+      with:
+        name: nexa-cpu-app
+        path: nexa.tar.gz
 
-    #     cp -R dist/nexa.app pkg_root/Applications/
+  build-macos-metal:
+    runs-on: macos-latest
+    steps:
+    - uses: actions/checkout@v4
+      with:
+        submodules: 'recursive'
+    
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.11'
+    
+    - name: Install system dependencies
+      run: |
+        brew install cmake
 
-    #     pkgbuild --root pkg_root \
-    #             --identifier com.nexaai.sdk \
-    #             --version ${{ env.VERSION }} \
-    #             --install-location / \
-    #             "Nexa-${{ env.VERSION }}-unsigned.pkg"
+    - name: Create and activate virtual environment
+      run: |
+        python -m venv env_metal
+        source env_metal/bin/activate
+        echo "VIRTUAL_ENV=$VIRTUAL_ENV" >> $GITHUB_ENV
+        echo "$VIRTUAL_ENV/bin" >> $GITHUB_PATH
 
-    #     rm -rf pkg_root
+    - name: Install Python dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install pyinstaller wheel setuptools scikit-build-core
+
+    - name: Install nexaai
+      run: CMAKE_ARGS="-DGGML_METAL=ON -DSD_METAL=ON" pip install nexaai --prefer-binary --index-url https://nexaai.github.io/nexa-sdk/whl/metal --extra-index-url https://pypi.org/simple --no-cache-dir
+
+    - name: Extract version
+      run: |
+        VERSION=$(python -c "import re; print(re.search(r'__version__\s*=\s*[\'\"](.*?)[\'\"]', open('nexa/__init__.py').read()).group(1))")
+        echo "VERSION=$VERSION" >> $GITHUB_ENV
+
+    - name: Build with PyInstaller
+      run: pyinstaller nexa-macos-metal.spec
+
+    - name: Modify Info.plist
+      run: |
+        /usr/libexec/PlistBuddy -c "Set CFBundleExecutable nexa-metal" "dist/nexa-metal.app/Contents/Info.plist"
+        /usr/libexec/PlistBuddy -c "Add LSUIElement string 1" "dist/nexa-metal.app/Contents/Info.plist"
+
+    - name: Set app icon
+      run: |
+        cp nexa-icon.icns dist/nexa-metal.app/Contents/Resources/
+        /usr/libexec/PlistBuddy -c "Set :CFBundleIconFile nexa-icon" dist/nexa-metal.app/Contents/Info.plist
+
+    - name: Import Code Signing Certificates
+      env:
+        APP_CERTIFICATE_BASE64: ${{ secrets.MACOS_CERTIFICATE }}
+        APP_CERTIFICATE_PASSWORD: ${{ secrets.MACOS_CERTIFICATE_PASSWORD }}
+        INSTALLER_CERTIFICATE_BASE64: ${{ secrets.MACOS_INSTALLER_CERTIFICATE }}
+        INSTALLER_CERTIFICATE_PASSWORD: ${{ secrets.MACOS_INSTALLER_CERTIFICATE_PASSWORD }}
+      run: |
+        echo $APP_CERTIFICATE_BASE64 | base64 --decode > app_certificate.p12
+        echo $INSTALLER_CERTIFICATE_BASE64 | base64 --decode > installer_certificate.p12
+        security create-keychain -p "" build.keychain
+        security default-keychain -s build.keychain
+        security unlock-keychain -p "" build.keychain
+        security import app_certificate.p12 -k build.keychain -P $APP_CERTIFICATE_PASSWORD -T /usr/bin/codesign
+        security import installer_certificate.p12 -k build.keychain -P $INSTALLER_CERTIFICATE_PASSWORD -T /usr/bin/productsign
+        security set-key-partition-list -S apple-tool:,apple:,codesign: -s -k "" build.keychain
+
+    - name: Sign the app
+      env:
+        APPLE_DEVELOPER_ID: ${{ secrets.APPLE_DEVELOPER_ID }}
+      run: |        
+        # Sign Python binaries
+        codesign --force --options runtime --timestamp -s "$APPLE_DEVELOPER_ID" "dist/nexa-metal.app/Contents/Resources/Python"
+        codesign --force --options runtime --timestamp -s "$APPLE_DEVELOPER_ID" "dist/nexa-metal.app/Contents/Resources/Python.framework/Python"
+        codesign --force --options runtime --timestamp -s "$APPLE_DEVELOPER_ID" "dist/nexa-metal.app/Contents/Frameworks/Python"
+        codesign --force --options runtime --timestamp -s "$APPLE_DEVELOPER_ID" "dist/nexa-metal.app/Contents/Frameworks/Python.framework/Python"
+
+        # Sign all other components
+        find "dist/nexa-metal.app/Contents" -type f \( -name "*.so" -o -name "*.dylib" \) -exec codesign --force --options runtime --timestamp -s "$APPLE_DEVELOPER_ID" {} \;
+        
+        # Sign the main executable
+        codesign --force --options runtime --timestamp -s "$APPLE_DEVELOPER_ID" "dist/nexa-metal.app/Contents/MacOS/nexa-metal"
+        
+        # Sign the entire app bundle with --deep option
+        codesign --force --options runtime --timestamp --deep -s "$APPLE_DEVELOPER_ID" "dist/nexa-metal.app"
+        
+        # Verify the signature
+        codesign -vvv --deep --strict "dist/nexa-metal.app"
+
+    - name: Rename and upload app
+      run: |
+        mv dist/nexa-metal.app dist/nexa-metal.app
+        tar -czf nexa-metal.tar.gz -C dist nexa-metal.app
+      
+    - uses: actions/upload-artifact@v4
+      with:
+        name: nexa-metal-app
+        path: nexa-metal.tar.gz
+
+  
+  create-combined-pkg-installer:
+    needs: [build-macos-cpu, build-macos-metal]
+    runs-on: macos-latest
+
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Download CPU app
+      uses: actions/download-artifact@v4
+      with:
+        name: nexa-cpu-app
+        
+    - name: Download Metal app
+      uses: actions/download-artifact@v4
+      with:
+        name: nexa-metal-app
+
+    - name: Extract apps
+      run: |
+        tar -xzf nexa.tar.gz
+        tar -xzf nexa-metal.tar.gz
+
+    - name: Extract version
+      run: |
+        VERSION=$(python -c "import re; print(re.search(r'__version__\s*=\s*[\'\"](.*?)[\'\"]', open('nexa/__init__.py').read()).group(1))")
+        echo "VERSION=$VERSION" >> $GITHUB_ENV
 
     - name: Create PKG Installer
       run: |
         mkdir -p pkg_root/Applications pkg_scripts
 
-        cp -R dist/nexa.app pkg_root/Applications/
+        cp -R nexa.app pkg_root/Applications/
+        cp -R nexa-metal.app pkg_root/Applications/
 
         cat << EOF > pkg_scripts/preinstall
         #!/bin/bash
         # Remove existing symlink if it exists
         rm -f /usr/local/bin/nexa
+        # Remove existing Nexa app if it exists
+        rm -rf /Applications/nexa.app
         exit 0
         EOF
 
         cat << EOF > pkg_scripts/postinstall
         #!/bin/bash
+        # Determine if Metal is supported
+        if /usr/sbin/system_profiler SPDisplaysDataType | grep -q "Metal: Supported"; then
+          cp -R /Applications/nexa-metal.app /Applications/nexa.app
+          rm -rf /Applications/nexa-metal.app
+        else
+          cp -R /Applications/nexa.app /Applications/nexa.app
+          rm -rf /Applications/nexa.app
+        fi
+
         # Create the symlink
         ln -sf /Applications/nexa.app/Contents/MacOS/nexa /usr/local/bin/nexa
 
@@ -174,7 +282,7 @@ jobs:
 
         pkgbuild --root pkg_root \
                 --scripts pkg_scripts \
-                --identifier com.yourcompany.nexa \
+                --identifier com.nexaai.sdk \
                 --version ${{ env.VERSION }} \
                 --install-location / \
                 "Nexa-${{ env.VERSION }}-unsigned.pkg"
@@ -242,5 +350,5 @@ jobs:
     - name: Upload artifact
       uses: actions/upload-artifact@v4
       with:
-        name: nexa-${{ env.VERSION }}-cpu-macos-amd64
+        name: nexa-${{ env.VERSION }}-macos-installer
         path: Nexa-${{ env.VERSION }}.pkg
