--- a/.gitmodules
+++ b/.gitmodules
@@ -4,5 +4,5 @@
 	branch = master
 [submodule "dependency/llama.cpp"]
 	path = dependency/llama.cpp
-	url = https://github.com/NexaAI/llama.cpp.git
+	url = https://github.com/ggerganov/llama.cpp
 	branch = experiment-branch
