--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,4 @@
 [submodule "dependency/llama.cpp"]
 	path = dependency/llama.cpp
 	url = https://github.com/NexaAI/llama.cpp.git
+	branch = experiment-branch
