--- a/requirements.txt
+++ b/requirements.txt
@@ -38,10 +38,12 @@ tqdm
 tabulate
 streamlit
 
-# bechmark
+# eval
+evaluate
 pytablewriter
 sacrebleu
 sqlitedict
 langdetect
 rouge_score
 immutabledict
+transformers
