--- a/pyproject.toml
+++ b/pyproject.toml
@@ -110,6 +110,7 @@ sdist.include = [
     "CMakeLists.txt",
     "dependency/llama.cpp/*",
     "dependency/stable-diffusion.cpp/*",
+    "dependency/bark.cpp/*",
 ]
 sdist.exclude = [
     ".github",
@@ -118,11 +119,17 @@ sdist.exclude = [
     "nexa.egg-info",
     "dependency/llama.cpp/build",
     "dependency/stable-diffusion.cpp/build",
+    "dependency/bark.cpp/build",
 ]
 build.verbose = true
 cmake.build-type = "Release"
 cmake.version = ">=3.16"
-cmake.args = ["-DCMAKE_BUILD_PARALLEL_LEVEL=16"]
+cmake.args = [
+    "-DCMAKE_BUILD_PARALLEL_LEVEL=16",
+    "-DSTABLE_DIFFUSION_BUILD=ON",
+    "-DLLAMA_BUILD=ON",
+    "-DBARK_BUILD=ON"
+]
 
 [tool.scikit-build.metadata.version]
 provider = "scikit_build_core.metadata.regex"
