Fix cmake llama rpath

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,6 +48,7 @@ endfunction()
 # Collect all user-defined options
 get_all_options(USER_DEFINED_OPTIONS)
 
+
 # stable_diffusion_cpp project
 option(STABLE_DIFFUSION_BUILD "Build stable-diffusion.cpp" ON)
 if(STABLE_DIFFUSION_BUILD)
@@ -77,7 +78,13 @@ option(LLAMA_BUILD "Build llama.cpp" ON)
 if(LLAMA_BUILD)
     set(LLAMA_CUDA ${GGML_CUDA})
     set(LLAMA_METAL ${GGML_METAL})
-    
+
+    if(APPLE)
+        set(CMAKE_INSTALL_RPATH "@loader_path;@loader_path/../lib")
+    else()
+        set(CMAKE_INSTALL_RPATH "\$ORIGIN:\$ORIGIN/../lib")
+    endif()
+        
     ExternalProject_Add(llama_project
         SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/dependency/llama.cpp
         BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR}/llama_build
@@ -88,6 +95,12 @@ if(LLAMA_BUILD)
             -DCMAKE_CXX_STANDARD=17
             -DLLAMA_CUDA=${LLAMA_CUDA}
             -DLLAMA_METAL=${LLAMA_METAL}
+            -DCMAKE_INSTALL_RPATH="${PLATFORM_RPATH}"
+            -DCMAKE_BUILD_WITH_INSTALL_RPATH=TRUE
+            -DCMAKE_INSTALL_RPATH_USE_LINK_PATH=TRUE
+            -DCMAKE_SKIP_BUILD_RPATH=FALSE
+            -DCMAKE_SKIP_RPATH=FALSE
+            -DCMAKE_INSTALL_RPATH=${CMAKE_INSTALL_RPATH}
         BUILD_ALWAYS 1
         INSTALL_COMMAND ${CMAKE_COMMAND} --build . --target install
     )
@@ -157,3 +170,20 @@ install(
         PATTERN "*.so"
         PATTERN "*.dylib"
 )
+
+# Set RPATH for installed libraries
+if(UNIX)
+    if(APPLE)
+        set(CMAKE_INSTALL_RPATH "@loader_path")
+    else()
+        set(CMAKE_INSTALL_RPATH "$ORIGIN")
+    endif()
+    
+    file(GLOB_RECURSE INSTALLED_LIBRARIES 
+        "${SKBUILD_PLATLIB_DIR}/nexa/gguf/lib/*.so"
+        "${SKBUILD_PLATLIB_DIR}/nexa/gguf/lib/*.dylib")
+    
+    foreach(LIB ${INSTALLED_LIBRARIES})
+        file(RPATH_CHANGE FILE "${LIB}" OLD_RPATH "" NEW_RPATH "${CMAKE_INSTALL_RPATH}")
+    endforeach()
+endif()
