add nexa_perf for memory, latency and energy evaluation

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,6 +65,13 @@ eval = [
     "sacrebleu",
     "langdetect",
     "immutabledict",
+    "hydra-core",
+    "psutil",
+    "typing-extensions",
+    "flatten_dict",
+    "colorlog",
+    "pandas",
+    "rich",
 ]
 
 [project.urls]
