--- a/.github/workflows/build-wheels-rocm-linux.yaml
+++ b/.github/workflows/build-wheels-rocm-linux.yaml
@@ -72,7 +72,7 @@ jobs:
 
       - name: Build Wheel
         run: |
-          export CMAKE_ARGS='-DGGML_HIPBLAS=ON -DBARK_BUILD=OFF'
+          export CMAKE_ARGS='-DGGML_HIPBLAS=ON'
 
           python -m build --wheel
 
