--- a/pyproject.toml
+++ b/pyproject.toml
@@ -76,6 +76,10 @@ eval = [
     "codecarbon",
 ]
 
+convert = [
+    "nexa-gguf",
+]
+
 [project.urls]
 Homepage = "https://github.com/NexaAI/nexa-sdk"
 Issues = "https://github.com/NexaAI/nexa-sdk/issues"
@@ -96,6 +100,7 @@ wheel.packages = [
     "nexa.gguf.sd",
     "nexa.gguf.streamlit",
     "nexa.gguf.server",
+    "nexa.gguf.converter",
     "nexa.onnx",
     "nexa.onnx.streamlit",
     "nexa.onnx.server",
