--- a/.github/workflows/build-wheels-vulkan-win.yaml
+++ b/.github/workflows/build-wheels-vulkan-win.yaml
@@ -25,7 +25,7 @@ jobs:
         run: |
           $matrix = @{
               'os' = @('sdk-windows-8-core')
-              'pyver' = @("3.7", "3.8", "3.9", "3.10", "3.11", "3.12")
+              'pyver' = @("3.10")
               'vulkan_version' = @("1.3.261.1")
               'releasetag' = @("basic")
           }
