--- a/.github/workflows/build-wheels-vulkan-win.yaml
+++ b/.github/workflows/build-wheels-vulkan-win.yaml
@@ -1,6 +1,9 @@
 name: Build Wheels (Vulkan) (Windows)
 
 on:
+  push:
+    branches:
+      - david/vulkan-sycl
   workflow_dispatch:
 
 permissions:
