--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,6 +71,20 @@ set(COMMON_CMAKE_OPTIONS
     -DCMAKE_INSTALL_RPATH=${CMAKE_INSTALL_RPATH}
 )
 
+if(WIN32)
+    if(CMAKE_SYSTEM_VERSION)
+        list(APPEND COMMON_CMAKE_OPTIONS
+            -DCMAKE_SYSTEM_VERSION=${CMAKE_SYSTEM_VERSION}
+        )
+    endif()
+    
+    if(CMAKE_VS_WINDOWS_TARGET_PLATFORM_VERSION)
+        list(APPEND COMMON_CMAKE_OPTIONS
+            -DCMAKE_VS_WINDOWS_TARGET_PLATFORM_VERSION=${CMAKE_VS_WINDOWS_TARGET_PLATFORM_VERSION}
+        )
+    endif()
+endif()
+
 # stable_diffusion_cpp project
 option(STABLE_DIFFUSION_BUILD "Build stable-diffusion.cpp" ON)
 if(STABLE_DIFFUSION_BUILD)
