comment in release

--- a/.github/workflows/build-wheels-cuda-linux.yaml
+++ b/.github/workflows/build-wheels-cuda-linux.yaml
@@ -122,10 +122,10 @@ jobs:
           # write the build tag to the output
           Write-Output "CUDA_VERSION=$cudaVersion" >> $env:GITHUB_ENV
 
-      # - uses: softprops/action-gh-release@v2
-      #   with:
-      #     files: dist/*
-      #     # Set tag_name to <tag>-cu<cuda_version>
-      #     tag_name: ${{ github.ref_name }}-cu${{ env.CUDA_VERSION }}
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - uses: softprops/action-gh-release@v2
+        with:
+          files: dist/*
+          # Set tag_name to <tag>-cu<cuda_version>
+          tag_name: ${{ github.ref_name }}-cu${{ env.CUDA_VERSION }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
