--- a/.github/workflows/build-wheels-cpu.yaml
+++ b/.github/workflows/build-wheels-cpu.yaml
@@ -146,20 +146,20 @@ jobs:
           name: sdist
           path: ./dist/*.tar.gz
 
-  # release:
-  #   name: Release
-  #   needs: [build_wheels_win, build_wheels_arm64, build_sdist]  # build_wheels_linux
-  #   runs-on: ubuntu-latest
+  release:
+    name: Release
+    needs: [build_wheels_win, build_wheels_arm64, build_sdist]  # build_wheels_linux
+    runs-on: ubuntu-latest
 
-  #   steps:
-  #     - uses: actions/download-artifact@v4
-  #       with:
-  #         merge-multiple: true
-  #         path: dist
+    steps:
+      - uses: actions/download-artifact@v4
+        with:
+          merge-multiple: true
+          path: dist
 
-  #     - uses: softprops/action-gh-release@v2
-  #       with:
-  #         files: dist/*
-  #         tag_name: ${{ github.ref_name }}
-  #       env:
-  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - uses: softprops/action-gh-release@v2
+        with:
+          files: dist/*
+          tag_name: ${{ github.ref_name }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
