--- a/.github/workflows/build-wheels-metal.yaml
+++ b/.github/workflows/build-wheels-metal.yaml
@@ -50,21 +50,21 @@ jobs:
           name: wheels-macos-${{ matrix.os }}-metal
           path: ./wheelhouse2/*.whl
 
-  # release:
-  #   name: Release
-  #   needs: [build_wheels]
-  #   runs-on: ubuntu-latest
+  release:
+    name: Release
+    needs: [build_wheels]
+    runs-on: ubuntu-latest
 
-  #   steps:
-  #     - uses: actions/download-artifact@v4
-  #       with:
-  #         merge-multiple: true
-  #         path: dist2
+    steps:
+      - uses: actions/download-artifact@v4
+        with:
+          merge-multiple: true
+          path: dist2
 
-  #     - uses: softprops/action-gh-release@v2
-  #       with:
-  #         files: dist2/*
-  #         # set release name to <tag>-metal
-  #         tag_name: ${{ github.ref_name }}-metal
-  #       env:
-  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - uses: softprops/action-gh-release@v2
+        with:
+          files: dist2/*
+          # set release name to <tag>-metal
+          tag_name: ${{ github.ref_name }}-metal
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
